objects/EUR_CRM_Visit_Frequency__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON TRADE</fullName>
                </value>
                <value>
                    <fullName>OFF TRADE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Frequency_Span_Days__c</fullName>
        <label>Interval (Every N Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Visits_Within_Interval__c</fullName>
        <label>No. of Visits Within Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Channel__c</fullName>
        <label>Sub Channel</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Channel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ON_STD</fullName>
                </value>
                <value>
                    <fullName>ON_CAT</fullName>
                </value>
                <value>
                    <fullName>ON_VO</fullName>
                </value>
                <value>
                    <fullName>OFF_STD</fullName>
                </value>
                <value>
                    <fullName>OFF_VO</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Frequency_Name_English__c</fullName>
        <description>English value of VF Name for System Admin</description>
        <label>Visit Frequency Name (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visit Frequency (EU)</label>
    <listViews>
        <fullName>All_EUR_DE_Visit_Frequency</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>EUR_CRM_Sub_Channel__c</columns>
        <columns>EUR_CRM_Visit_Frequency_Name_English__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_DE_Visit_Frequency</value>
        </filters>
        <label>EUR DE Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AO_Visit_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_AO_Visit_Frequency</value>
        </filters>
        <label>EUR AO Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_Visit_Frequency_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_BG_Visit_Frequency</value>
        </filters>
        <label>EUR BG Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_Visit_Frequency</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_CH_Visit_Frequency</value>
        </filters>
        <label>EUR CH Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_BE_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_BE_Visit_Frequency</value>
        </filters>
        <label>All BE Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_Visit_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_DE_Visit_Frequency</value>
        </filters>
        <label>EUR DE Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Visit_Frequency</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_DK_Visit_Frequency</value>
        </filters>
        <label>EUR DK Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_Visit_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_FI_Visit_Frequency</value>
        </filters>
        <label>EUR FI Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Visit_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.GB_Visit_Frequency</value>
        </filters>
        <label>EUR GB Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_KE_Visit_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_KE_Visit_Frequency</value>
        </filters>
        <label>EUR KE Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_KE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Visit_Frequency</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_MA_Visit_Frequency</value>
        </filters>
        <label>EUR MA Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_Visit_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_NG_Visit_Frequency</value>
        </filters>
        <label>EUR NG Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Visit_Frequency</fullName>
        <columns>EUR_CRM_Channel__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_RU_Visit_Frequency</value>
        </filters>
        <label>EUR RU Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Visit_Frequency</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit_Frequency__c.EUR_ZA_Visit_Frequency</value>
        </filters>
        <label>EUR ZA Visit Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Visit Frequency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Frequency (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR AO Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR_AT_Visit_Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR BE Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR BG Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR CH Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CZ_Visit_Frequency</fullName>
        <active>true</active>
        <label>CZ Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Visit_Frequency</fullName>
        <active>true</active>
        <description>Visit Frequency for Germany</description>
        <label>EUR_DE_Visit_Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Visit_Frequency</fullName>
        <active>true</active>
        <description>Record Type for DK Visit Frequency</description>
        <label>EUR DK Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR EE Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Visit_Frequency</fullName>
        <active>true</active>
        <description>Visit Frequency for Finland</description>
        <label>EUR FI Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR KE Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR LT Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR LV Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR MA Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR NG Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR PT Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Visit_Frequency</fullName>
        <active>true</active>
        <description>Visit Frequency for Russia</description>
        <label>EUR RU Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_SK_Visit_Frequency</fullName>
        <active>true</active>
        <label>SK Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Visit_Frequency</fullName>
        <active>true</active>
        <label>EUR ZA Visit Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>GB_Visit_Frequency</fullName>
        <active>true</active>
        <label>GB Visit Frequency</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>